--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -79,17 +79,19 @@ select {
 .brand {
   width: 170px;
   height: 82px;
-  background: #ffdede;
   border: 1px solid #000;
+  border-radius: 4px;
+  background: #ffdede;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  color: #000;
-  font-weight: 700;
-  font-size: 32px;
-  text-transform: uppercase;
-  letter-spacing: 0.06em;
+}
+
+.brand__logo {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .site-header__btn-box {
@@ -697,6 +699,8 @@ select {
 }
 
 .site-footer__logo {
-  font-size: 12px;
-  font-weight: 700;
+  width: 180px;
+  height: 80px;
+  object-fit: contain;
+  display: block;
 }
